(executable
    (name test_sdl2)
    (preprocess (pps lwt_ppx))
    (public_name test_sdl2_js)
    (js_of_ocaml)
    (libraries
        js_of_ocaml
        lwt
        bigarray
        sdl2
        sdl2example
            ))

(install
    (section bin)
    (files gl-matrix-min.js index.html test_sdl2.bc.js))
