(executable
    (name test_sdl2)
    (modes byte native)
    (package sdl2-example)
    (public_name test_sdl2)
    (modules test_sdl2)
    (libraries
        sdl2
        sdl2example
        console.lib
	unix
            ))

(executable
    (name test_output)
    (package sdl2-example)
    (public_name test_output)
    (modules test_output)
    (libraries
        sdl2
        sdl2example
        console.lib
	unix
            ))
